--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="title" content="JSudoku"/>
     <meta name="description" property="og:description" content="JSudoku is a single page Sudoku app made using JavaScript."/> 
 
-    <meta name="image" property="og:image:secure_url" content="https://github.com/rahulj93/JavaScript-Project---Sudoku/blob/master/favicon-32x32.png"/>
-    <meta name="url" property="og:url" content="https://rahulj93.github.io/JavaScript-Project---Sudoku/"/>
+    <meta name="image" property="og:image:secure_url" content="https://github.com/rahulj93/JSudoku/blob/master/favicon-32x32.png"/>
+    <meta name="url" property="og:url" content="https://rahulj93.github.io/JSudoku/"/>
     <meta name="author" content="Rahul Jain"/>
   </head>
   <body>
@@ -27,7 +27,7 @@
       <p>
         Developed by Rahul Jain  
       </p>
-    <a href="https://github.com/rahulj93/JavaScript-Project---Sudoku">GitHub</a>
+    <a href="https://github.com/rahulj93/JSudoku">GitHub</a>
     <a href="https://www.linkedin.com/in/rahul-jain-ny">LinkedIn</a>
     <a href="https://rahulj93.github.io/">Personal Site</a>
 
